K8s/tripviewer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
  labels:
    app: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tripviewer
  template:
    metadata:
      labels:
        app: tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registrywjl7126.azurecr.io/tripviewer:0.0.1
        ports:
        - containerPort: 80
