K8s/tripviewer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-svc
spec:
   selector:
     app: tripviewer
  - ports:
    - protocol: TCP
      port: 80
      targetPort: 80
